--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,10 @@
+# client-gateway
 PORT=3000
+
+# products-ms
 PRODUCTS_MICROSERVICE_PORT=3001
 PRODUCTS_MICROSERVICE_HOST=localhost
+
+# orders-ms
+ORDERS_MICROSERVICE_PORT=3002
+ORDERS_MICROSERVICE_HOST=localhost
