--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,5 @@
 # client-gateway
 PORT=3000
 
-# products-ms
-PRODUCTS_MICROSERVICE_PORT=3001
-PRODUCTS_MICROSERVICE_HOST=localhost
-
-# orders-ms
-ORDERS_MICROSERVICE_PORT=3002
-ORDERS_MICROSERVICE_HOST=localhost
+# Utilizar conexion NATS(Ya sea para products y orders microservice)
+NATS_SERVERS = "nats://localhost:4222"
